# BioMassters

./: .gitignore  Makefile  pyproject.toml
data/: train_agbm_metadata_slim.parquet
data/metadata_parquet/: features_metadata_slim.parquet
data/samples/: 001b0634_S1_00.tif  001b0634_S2_00.tif  001b0634_agbm.tif
docs/: paperspace.txt  tasks.rst
notebooks/: Baseline_Single.ipynb  Data_Preperation.ipynb  Inside_UTAE.ipynb  Sample_Image_Exploration.ipynb  Setup_Gradient.ipynb  Test_Datasets.ipynb  U_TAE_Model.ipynb  Untitled.ipynb  Untitled1.ipynb  Verify Sentinel-1 Band Assignment.ipynb  distributed_training.py  distributed_training_utae.ipynb  distributed_training_utae.py  fine_tuning_utae.ipynb  fsspec_expts.ipynb  gradient_datasource.ipynb  huggingface_temporal_data_ model NEW.ipynb  huggingface_temporal_data_ model.ipynb  memory_monitor.py  memory_monitor.txt  metadata_exploration.ipynb  nondistributed_training.py  nondistributed_training_utae.ipynb  playground.ipynb  prediction_submission.ipynb  temporal_data_ model.ipynb  torchdata_s3.ipynb  torchdata_s3_datasource.ipynb  training.py
scripts/: agbm_metrics.py  baseline_unet_resnet50.py  dataset_ram_usage.py  decision_fusion.py  find_batch_size.py  predict_s2_monthly.py  train.py  train_temporal_s2.py
src/biomasstry/: inference.py  utils.py
src/biomasstry/data/: __init__.py  single_image_dataset.py
src/biomasstry/datasets/: __init__.py  sentinel2.py  temporal_sentinel1.py  temporal_sentinel2.py  utils.py
src/biomasstry/models/: __init__.py  fcn.py  ltae.py  sentinel2_single_lit_model.py  unet_tae.py  (+2 more)
