[project]
name = "biomasstry"
version = "0.0.1"
description = "Attempt at Driven Data BioMassters Competition."
authors = [
    {name = "Goopy Flux", email = "goopy.flux@gmail.com"},
]
dependencies = []
requires-python = ">=3.9"
license = {text = "MIT"}

[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"
